--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ bertopic==0.16.0
 
 # Natural language processing
 nltk==3.8.1
-sentence-transformers==2.2.2
+sentence-transformers==2.7.0
+transformers==4.40.0
+huggingface-hub==0.23.0
 
 # Visualization libraries
 matplotlib==3.8.2
@@ -25,6 +27,5 @@ openai==0.28.1
 # Additional dependencies
 scipy==1.11.4
 joblib==1.3.2
-
-# Env
+torch>=2.0.0
 python-dotenv==1.0.0
